Don't need checksums for external assets
